tests/NormalTests/paczka1/fuzzy1/65470960.err
Error in line 2: bb6c S252 47,8
Error in line 31: 5qjm A243 27,0
Error in line 39: bb6c A``8 159,`
Error in line 36: bb6c A228 80,4
